# cheap-settings

./: .bumpversion.toml  .gitignore  .secrets.baseline  404.html  CHANGELOG.md  Justfile  LICENSE  README.md  index.html  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml  python-package.yml
api/: index.html
docs/: api.md  examples.md
examples/: basic_usage.py  command_line.py  environment_variables.py  extended_types.py  from_env.py  index.html  inheritance.py  to_static.py  type_conversion.py  type_inference.py
python-3.14-issues/: index.html
search/: search_index.json
src/cheap_settings/: __init__.py  cheap_settings.py  command_line.py
tests/: test_cheap_settings.py  test_command_line.py  test_error_messages.py  test_extended_types.py  test_from_env.py  test_from_string.py  test_inferred_types.py  test_path_support.py  test_pickle.py  test_to_static.py  test_uninitialized_settings.py
