[project]
name = "cheap-settings"
version = "0.1.0"
description = "A lightweight, low footprint settings system"
readme = "README.md"
authors =[
    {name = "Evan Williams", email = "evanjpw@gmail.com"}
]
requires-python = ">=3.11"
repository = ""
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
changelog = ""
license = "MIT"
keywords = [
    "config",
    "python",
    "application",
    "settings",
    "environment",
    "configuration",
    "env",
    "configurations",
    "environments",
    "python-config"
]
# See https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
