[project]
name = "cheap-settings"
version = "0.1.5"
description = "A lightweight, low footprint settings system"
readme = "README.md"
authors =[
    {name = "Evan Williams", email = "evanjpw@gmail.com"}
]
requires-python = ">=3.8"
license = "MIT"
keywords = [
    "config",
    "python",
    "application",
    "settings",
    "environment",
    "configuration",
    "env",
    "configurations",
    "environments",
    "python-config"
]
# See https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
repository = "https://github.com/evanjpw/cheap-settings"
documentation = "https://evanjpw.github.io/cheap-settings/"
issues = "https://github.com/evanjpw/cheap-settings/issues"
# homepage = "https://"
# TODO: add a changelog
# changelog = "https://github.com/evanjpw/cheap-settings/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=5.0.0",  # The latest version that supports Python 3.8 is 5.0.0
    "ruff>=0.13.3",
    "isort>=5.13.2",  # The latest version that supports Python 3.8 is 5.13.2
    "pre-commit>=3.5.0",  # The latest version that supports Python 3.8 is 3.5.0
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.21",
    "mkdocstrings[python]>=0.11.4",  # The latest version that supports Python 3.8 is 0.11.4
]

[tool.isort]
profile = "black"

[tool.hatch.build]
exclude = [
    "/.save",
    "/tests",
    "/examples"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
